@@ -7,6 +7,7 @@ import static java.util.Optional.empty;
 import com.chutneytesting.glacio.domain.parser.IParseExecutableStep;
 import com.chutneytesting.tools.ThrowingFunction;
 import com.chutneytesting.tools.loader.ExtensionLoaders;
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Locale;
@@ -41,13 +42,13 @@ public class ParserClasspathReader {
             .collect(Collectors.toList());
     }
 
-    private static Optional<IParseExecutableStep> instantiateGlacioParser(Class<?> clazz) throws IllegalAccessException, InstantiationException {
+    private static Optional<IParseExecutableStep> instantiateGlacioParser(Class<?> clazz) throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
         if (!IParseExecutableStep.class.isAssignableFrom(clazz)) {
             LOGGER.warn("{} is declared as glacio parser but does not implement GlacioExecutableStepParser interface. Ignore it.", clazz.getSimpleName());
             return empty();
         }
         Class<IParseExecutableStep> parserClazz = (Class<IParseExecutableStep>) clazz;
-        return Optional.of(parserClazz.newInstance());
+        return Optional.of(parserClazz.getDeclaredConstructor().newInstance());
     }
 
     private static Map<Pair<Locale, String>, IParseExecutableStep> parserPairKeywords(IParseExecutableStep parser) {
